--- a/index.html
+++ b/index.html
@@ -53,8 +53,10 @@
           Le jeudi, en général, c'est Philibar. Pour tout savoir sur le burger du jour au Philibar :
       </p>
 
-      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphilibarjeux%2Fposts%2F990265784912781&show_text=true&width=500" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-
+      <!-- <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphilibarjeux%2Fposts%2F990265784912781&show_text=true&width=500" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    -->
+      
+      
       <p class="subtitle">Pour les non adeptes de steak pur boeuf (ou les non adeptes de la coriandre), le reste du menu est <a href=https://www.philibar.net/#carte>là</a> (rubrique "Le Salé" !). Contrairement à ce qui est indiqué, les hot dogs sont servis à midi, depuis quelques temps. Également, contrairement à ce qui est indiqué, la "Pièce du boucher" n'est pas végétarienne.</p>
 
     </section>
@@ -136,12 +138,6 @@
 
     tabs[0].click();
   })();
-</script>
-<script src="scriptsAndStyles/highlight/highlight.pack.js"></script>
-<script>
-  document.addEventListener('DOMContentLoaded', (event) => {
-    hljs.initHighlightingOnLoad();
-  });
 </script>
 
 
