--- a/quiz_ems.html
+++ b/quiz_ems.html
@@ -17,6 +17,8 @@
     <h5>Désolé, il faut vérifier vous-mêmes que vous avez tout. Les communes sont classées et numérotées pour vous aider.</h5>
 
     <p class="subtitle">Bonne chance !</p>
+    <p>Ah, petite précision ! Le temps est compté, hop hop hop !</p>
+        <div id="timer"></div>
     <input id="tentative" type="text" onchange="changeBackground(this);" />
 
     <br/>
@@ -251,4 +253,40 @@ var allchar="0123456789ABCDEF";
 
   </script>
 
-    </script>
+
+  <!-- juste pour le timer -->
+<script>
+
+var startTime = Date.now();
+var second = 1000;
+var minute = second * 60;
+var hour = minute * 60;
+var container = document.getElementById('timer');
+
+function stopTimer() {
+    clearInterval(timer);
+}
+
+function pad(n){
+  return ('00' + n).slice(-2);
+}
+
+var timer = setInterval(function(){
+  var currentTime = Date.now();
+  var difference = currentTime - startTime;
+
+  var hours = pad((difference / hour) | 0);
+  var minutes = pad(((difference % hour) / minute) | 0);
+  var seconds = pad(((difference % minute) / second) | 0);
+
+  container.innerHTML = hours + ':' + minutes + ':' + seconds;
+
+// This only represents time between renders. Actual time rendered is based
+// on the elapsed time calculated above.
+}, 250);
+</script>
+  
+
+
+
+</html>
