--- a/index.html
+++ b/index.html
@@ -445,7 +445,6 @@ var allchar="0123456789ABCDEF";
     } 
             else if (tentative.value==v24_v) {
       document.getElementById("v24").style.display = 'block';
-      document.getElementById("v24").style.display = 'block';
     } 
             else if (tentative.value==v25_v) {
       document.getElementById("v25").style.display = 'block';
@@ -454,7 +453,7 @@ var allchar="0123456789ABCDEF";
       document.getElementById("v26").style.display = 'block';
     } 
             else if (tentative.value==v27_v) {
-      document.getElementById("v28").style.display = 'block';
+      document.getElementById("v27").style.display = 'block';
     } 
             else if (tentative.value==v28_v) {
       document.getElementById("v28").style.display = 'block';
@@ -473,6 +472,9 @@ var allchar="0123456789ABCDEF";
     }
                 else if (tentative.value==v33_v) {
       document.getElementById("v33").style.display = 'block';
+    }
+                   else if (tentative.value==v34_v) {
+      document.getElementById("v34").style.display = 'block';
     }
 
     else {
