--- a/quiz_ems.html
+++ b/quiz_ems.html
@@ -4,8 +4,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>THE EMS QUIZ</title>
+    <title>L'espace jeux</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="stylesheet" href="app.css">
+
     <link rel="icon" href="favicon.ico" />
 
 
